--- a/lang/en.json
+++ b/lang/en.json
@@ -1607,9 +1607,7 @@
 	"action.randomize_marker_colors": "Randomize Marker Colors",
 
 	"action.duplicate": "Duplicate",
-	"action.duplicate.desc": "Duplicates the selected elements or group",
 	"action.delete": "Delete",
-	"action.delete.desc": "Deletes the selected elements or group",
 	"action.delete.keep_vertices": "Keep Edges/Vertices",
 	"action.move_to_group": "Move to",
 	"action.move_to_group.desc": "Move the selected elements to a different outliner group or element",
@@ -1624,11 +1622,9 @@
 	"action.select_window": "Select...",
 	"action.select_window.desc": "Search and select elements based on their properties",
 	"action.invert_selection": "Invert Selection",
-	"action.invert_selection.desc": "Invert the current selection of elements",
+	"action.invert_selection.desc": "Invert the current selection",
 	"action.select_all": "Select All",
-	"action.select_all.desc": "Select all elements, faces, vertices, or keyframes",
 	"action.unselect_all": "Unselect All",
-	"action.unselect_all.desc": "Unselect all elements, faces, vertices, or keyframes",
 	"action.hide_everything_except_selection": "Hide Everything Except Selection",
 	"action.hide_everything_except_selection.desc": "Toggle visibility on all elements except the ones that are selected",
 	"action.collapse_groups": "Collapse Groups",
