--- a/lang/en.json
+++ b/lang/en.json
@@ -1129,6 +1129,8 @@
 	"settings.show_only_selected_uv.desc": "Only display the selected UV faces in the UV editor by default",
 	"settings.default_bedrock_format": "Default Bedrock Format",
 	"settings.default_bedrock_format.desc": "Select the default format to load Minecraft Bedrock models in, when no specific format can be detected from context.",
+	"settings.default_java_block_version": "Default Java Block/Item Version",
+	"settings.default_java_block_version.desc": "Default format version when creating new Java block/item models or opening files without format version",
 	"settings.animation_snap": "Animation Snap",
 	"settings.animation_snap.desc": "Default snap interval for keyframes in the animation timeline in steps per second. This can also be changed per animation. The default value is 24.",
 	"settings.default_keyframe_interpolation": "Default Keyframe Interpolation",
