--- a/lang/es.json
+++ b/lang/es.json
@@ -2535,5 +2535,7 @@
 	"settings.limit_brush_opacity_per_stroke": "Limitar la Opacidad del Pincel por Trazo",
 	"settings.limit_brush_opacity_per_stroke.desc": "Limite la opacidad que un pincel puede aplicar al valor del control deslizante de opacidad durante cada trazo. Con un pincel suave, este comportamiento puede generar un ligero ruido no deseado.",
 	"action.merge_splines": "Merge Splines",
-	"action.merge_splines.desc": "Merge multiple splines into one"
+	"action.merge_splines.desc": "Merge multiple splines into one",
+	"settings.default_java_block_version": "Default Java Block/Item Version",
+	"settings.default_java_block_version.desc": "Default format version when creating new Java block/item models or opening files without format version"
 }
