--- a/lang/zh_tw.json
+++ b/lang/zh_tw.json
@@ -7,7 +7,7 @@
 	"dialog.save": "儲存",
 	"dialog.discard": "撤回",
 	"dialog.dontshowagain": "不再顯示",
-	"data.cube": "立方體",
+	"data.cube": "方塊",
 	"data.group": "群組",
 	"data.texture": "紋理",
 	"data.plugin": "插件",
@@ -1421,7 +1421,7 @@
 	"generic.left": "左",
 	"generic.right": "右",
 	"mode.start.quick_setup": "快速設置",
-	"mode.start.keymap": "Keymap",
+	"mode.start.keymap": "按鍵綁定",
 	"mode.start.quick_setup.more_themes": "等…",
 	"dialog.resize_texture.animation_frames": "動畫幀",
 	"dialog.export_emission_map.title": "導出動畫",
@@ -1437,13 +1437,13 @@
 	"dialog.create_texture.max_edge_angle.desc": "兩個面之間仍將被組合的最大角度",
 	"dialog.create_texture.max_island_angle": "島嶼的最大傾斜角度",
 	"dialog.create_texture.max_island_angle.desc": "同一個 UV 貼圖可以組合的最大角度",
-	"settings.mobile_panel_side": "Mobile Panel Side",
-	"settings.mobile_panel_side.desc": "Select which side of the screen panels are displayed on when using Blockbench on in landscape orientation",
-	"settings.obj_face_export_mode": "OBJ Face Export Mode",
-	"settings.obj_face_export_mode.desc": "Choose to let the OBJ exporter convert all faces into tris or quads",
+	"settings.mobile_panel_side": "行動裝置面板位置",
+	"settings.mobile_panel_side.desc": "選擇橫向操作時面板的顯示方位",
+	"settings.obj_face_export_mode": "OBJ 多邊形面匯出模式",
+	"settings.obj_face_export_mode.desc": "選擇讓 OBJ 匯出程式將所有面轉換為三角形或四邊形",
 	"settings.obj_face_export_mode.both": "預設",
-	"settings.obj_face_export_mode.tris": "Convert to Tris",
-	"settings.obj_face_export_mode.quads": "Convert to Quads",
+	"settings.obj_face_export_mode.tris": "轉換為三角形",
+	"settings.obj_face_export_mode.quads": "轉換為四邊形",
 	"action.seam_tool": "縫隙連接工具",
 	"action.seam_tool.desc": "用于定義網格邊緣上的 UV 接縫的工具",
 	"action.resolve_group": "解析分組",
@@ -1474,45 +1474,45 @@
 	"action.timeline_setups": "時間線設置",
 	"action.save_timeline_setup": "保存時間線設置...",
 	"action.save_timeline_setup.desc": "保存當前選定的動畫師和頻道的預設",
-	"menu.texture": "Texture",
+	"menu.texture": "紋理",
 	"menu.texture.render_mode.default": "預設",
-	"menu.texture.merge_onto_texture": "Merge Onto Texture Above",
-	"menu.animation.unload": "Unload",
-	"panel.timeline": "Timeline",
+	"menu.texture.merge_onto_texture": "向上合併貼圖",
+	"menu.animation.unload": "釋放",
+	"panel.timeline": "時間軸",
 	"action.pan_tool": "平移工具",
 	"action.pan_tool.desc": "在視口和紋理編輯器中導航的工具",
-	"mode.start.recent.favorite": "Mark as Favorite",
+	"mode.start.recent.favorite": "標示為最愛",
 	"mode.start.info": "資訊",
 	"mode.start.target": "目標",
 	"mode.start.start": "開始",
 	"mode.start.create_new": "創建新模型",
 	"mode.start.format.informations": "好消息 :",
 	"mode.start.format.resources": "資源",
-	"format.free.info.meshes": "In this format, you can create low poly models using cubes and custom shaped meshes.",
-	"format.free.info.limitation": "Models cannot be loaded into games that need specialized formats, such as Minecraft.",
-	"format.skin.info.skin": "This format is designed to create Minecraft skins and entity textures.",
-	"format.skin.info.model": "The model cannot be changed. In order to make changes to the model, first convert to a different format via **File** > **Convert Project**.",
-	"format.java_block.info.rotation": "Rotations are limited to one axis per element",
-	"format.java_block.info.size": "The model is limited to a size of 3 by 3 by 3 blocks. Display settings can make item models larger though",
-	"format.java_block.info.animation": "This format does not support animations in vanilla Minecraft. If you are creating a mod, you can use GeckoLib to animate models. If not, the only way to animate is to switch out the model using commands or animated textures.",
+	"format.free.info.meshes": "此格式支援使用方塊以及自訂形狀的網格，可製作低多邊形風格的模型。",
+	"format.free.info.limitation": "此模型無法直接用於 Minecraft 或其他需要特定格式的遊戲讀取。",
+	"format.skin.info.skin": "此格式專為製作 Minecraft 皮膚與實體貼圖而設計。",
+	"format.skin.info.model": "無法更改此模型。若要修改模型，請先透過 **File** > **Convert Project** 來轉換成其他格式。",
+	"format.java_block.info.rotation": "每個元素一次只能沿著一個方向旋轉",
+	"format.java_block.info.size": "此模型受限於 3x3x3 方塊的尺寸，若需調整物品模型的實際顯示大小，可至 **顯示設定** 進行設定。",
+	"format.java_block.info.animation": "原版 Minecraft 不支援此格式的動畫。若是用於模組，建議使用 GeckoLib。否則你只能透過指令更換模型或利用動態紋理來達成動畫效果。",
 	"format.bedrock.info.textures": "每個模型只能有一個紋理",
 	"format.bedrock_block": "基岩版方塊",
 	"format.bedrock_block.desc": "Bedrock版方塊模型",
-	"format.modded_entity.info.integer_size": "The size of individual cubes is limited to integers.",
-	"format.modded_entity.info.format": "Models are written in Java code instead of dedicated data structures like all other Blockbench export formats.",
-	"format.optifine_entity.info.optifine_required": "Users without OptiFine installed won't see the model.",
-	"format.optifine_entity.info.pivots": "Bone pivots are locked, so it is a good idea to leave them untouched.",
+	"format.modded_entity.info.integer_size": "每個方塊的尺寸必須是整數，無法添加小數點。",
+	"format.modded_entity.info.format": "此模型是用 Java 程式碼編寫，而不是以 Blockbench 匯出格式使用專用資料結構。",
+	"format.optifine_entity.info.optifine_required": "此模型需要安裝 OptiFine 才能正常顯示。",
+	"format.optifine_entity.info.pivots": "軸心處於鎖定狀態，建議不要進行修改以避免錯誤。",
 	"format_category.low_poly": "Low-Poly",
 	"format_category.minecraft": "Minecraft",
 	"format_category.other": "其他",
 	"format_category.loaders": "加載程序",
 	"message.recover_backup.recover": "恢復",
-	"message.invalid_characters.title": "Invalid Path",
-	"message.invalid_characters.message": "The path of the imported file contains invalid characters, uppercase letters, or white spaces. The supported characters are: %0",
+	"message.invalid_characters.title": "路徑錯誤",
+	"message.invalid_characters.message": "匯入的路徑路徑中含有不合規定字元、大寫字母或空格。限使用以下支援的字元：%0",
 	"dialog.share_model.thumbnail": "縮略圖",
 	"dialog.skin.high_res_texture": "請注意，具有所選分辨率的皮膚將無法作為常規 Minecraft 皮膚使用。 選擇較低的分辨率。",
-	"settings.allow_display_slot_mirror": "Allow Display Slot Mirroring",
-	"settings.allow_display_slot_mirror.desc": "Allow Display slots for Java item models to be mirrored. WARNING: This only works in Minecraft 1.14 or earlier or in special cases.",
+	"settings.allow_display_slot_mirror": "啟用鏡像顯示功能",
+	"settings.allow_display_slot_mirror.desc": "啟用 Java 物品模型的鏡像顯示功能。警告：此功能僅限在 Minecraft 1.14（含）以前的版本或特定條件下有效。",
 	"action.switch_tabs": "切換選項卡",
 	"action.switch_tabs.desc": "在打開的選項卡之間循環。 按住 shift 以反方向循環。",
 	"action.unselect_all": "取消選取全部",
@@ -1523,7 +1523,7 @@
 	"action.keyframe_column_select": "選擇關鍵幀列",
 	"action.keyframe_column_select.desc": "沿播放鍵下方的列，選擇時間軸中的所有關鍵幀",
 	"menu.uv": "UV",
-	"menu.keyframe": "Keyframe",
+	"menu.keyframe": "關鍵影格",
 	"menu.palette.load.update": "Update Palette",
 	"menu.palette.load.update.desc": "Updates this palette with the colors of the current Blockbench palette",
 	"menu.timeline_marker.set_time": "Set Time...",
@@ -1534,14 +1534,14 @@
 	"preview_scene.minecraft_nether": "Nether",
 	"preview_scene.minecraft_end": "結束",
 	"dialog.project.modded_entity_flip_y": "Y軸翻轉",
-	"preview_scene.studio": "Studio",
+	"preview_scene.studio": "工作室",
 	"format.image": "圖片",
 	"modifier_actions.set_copy_source": "Set Copy Source",
 	"message.load_images.title": "載入圖片",
 	"message.load_images.edit_image": "編輯圖片",
 	"dialog.add_primitive.align_edges": "對齊邊緣",
 	"dialog.flip_animation.show_in_timeline": "在時間軸中顯示修改後的骨骼",
-	"settings.default_cube_size": "Cube Size",
+	"settings.default_cube_size": "方塊尺寸",
 	"settings.default_cube_size.desc": "Set the default cube size when creating a new cube",
 	"settings.uniform_keyframe": "Uniform Scale Keyframes",
 	"settings.uniform_keyframe.desc": "Set scale keyframes to uniform scaling by default",
